# rtchallenge

./: .gitignore  CMakeLists.txt  README.md  tmp.cpp
demos/: clock.cpp  pattern_demo.cpp  plane_demo.cpp  projectile.cpp  sphere_reflection.cpp  sphere_silhouette.cpp  world_demo.cpp
images/: clock.ppm  plane_demo.ppm  sphere_reflection.ppm  trajectory.ppm  world_demo.ppm  world_demo_shadows.ppm
src/: camera.cpp  camera.h  canvas.cpp  canvas.h  colour.cpp  colour.h  double.cpp  double.h  geometry.cpp  geometry.h  light.cpp  light.h  material.h  matrix.cpp  matrix.h  pattern.cpp  pattern.h  primitives.cpp  primitives.h  projectile.cpp  shape.cpp  shape.h  transform.cpp  transform.h  world.cpp  world.h
src/shapes/: plane.cpp  plane.h  sphere.cpp  sphere.h
src/tests/: camera_tests.cpp  canvas_tests.cpp  colour_tests.cpp  geometry_tests.cpp  light_tests.cpp  material_tests.cpp  matrix_tests.cpp  pattern_tests.cpp  plane_tests.cpp  primitives_tests.cpp  shape_tests.cpp  shapes_tests.cpp  transform_tests.cpp  world_tests.cpp
